Thu Aug 07 16:46:42 2003  Nanbor Wang  <nanbor@cs.wustl.edu>

	* examples/OEP/Display/NavDisplayGUI_exec/NavDisplayGUI.mpc:
	  Changed to use base project qt-min_moc as we don't need to use
	  ACE_QtReactor.

Wed Aug 06 17:00:05 2003  Nanbor Wang  <nanbor@cs.wustl.edu>

	* docs/XML/ciao_rt_cad_ext.dtd: Added DTD for RT extension to cad
	  file.

2003-08-06  Arvind S. Krishna  <arvindk@equus.dre.vanderbilt.edu>

	* performance-tests/Benchmark/RoundTrip/RoundTrip_exec.cpp:
	* performance-tests/Benchmark/RoundTrip/run_test.pl:
	Fixed problems relating to parsing arguments when the number of iterations
	is specified from the command line.

Tue Aug 05 17:25:45 2003  George Edwards <g.edwards@vanderbilt.edu>

        * examples/handcrafted/BasicSP_EC2/BMClosedED/BMClosedED.mpc:
        * examples/handcrafted/BasicSP_EC2/BMDevice/BMDevice.mpc:
        * examples/handcrafted/BasicSP_EC2/EC/EC.mpc:
        * examples/handcrafted/BasicSP_EC2/BMDisplay/BMDisplay.mpc:
        * examples/handcrafted/BasicSP_EC2/RTEventService/RTEventService.mpc:
        * examples/handcrafted/BasicSP_EC2/BasicSP.mpc:

        Added library include paths and additional library to MPC files.

        Removed file:
        * examples/handcrafted/BasicSP_EC2/EC/config:

        Removed unnecessary file.

        * examples/handcrafted/BasicSP_EC2/EC/controller.cpp:
        * examples/handcrafted/BasicSP_EC2/EC/client.cpp:

        Included ace/Streams.h.

Tue Aug 05 13:23:12 2003  George Edwards <g.edwards@vanderbilt.edu>

        Added files:
        * examples/handcrafted/BasicSP_EC2/*.*:
        * examples/handcrafted/BasicSP_EC2/BMClosedED/*.*:
        * examples/handcrafted/BasicSP_EC2/BMDevice/*.*:
        * examples/handcrafted/BasicSP_EC2/EC/*.*:
        * examples/handcrafted/BasicSP_EC2/descriptors/*.*:
        * examples/handcrafted/BasicSP_EC2/BMDisplay/*.*:
        * examples/handcrafted/BasicSP_EC2/RTEventService/*.*:

        Added new event channel example. The event service is